src/style.scss
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");

html,
body {
  min-height: 100vh;
  margin: 0;

  @media (max-width: 600px) {
    font-size: 14px;
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  font-family: "Inter", sans-serif;
}

.modal-container {
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.2);
  z-index: 2;
  opacity: 0;
  transition: opacity 0.1s linear;

  @media (max-width: 600px) {
    padding: 1rem;
  }

  &.fade-in {
    opacity: 1;

    .modal-box {
      transform: scale(1);
    }
  }

  .modal-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    transform: scale(1.1);
    padding: 2rem 3rem 1.7rem;
    background-color: #fff;
    box-shadow: 0 2px 20px 0 rgba(213, 217, 217, 0.8);
    border-radius: 7px;
    transition: transform 0.05s ease-in-out;

    @media (max-width: 600px) {
      padding: 1rem 1rem 0.7rem;
    }

    h3 {
      margin: 1rem 0;
      font-size: 1.3rem;
    }

    // Modal text
    p {
      text-align: center;
      margin: 0 0 2.5rem;
    }

    // Button container
    div {
      display: flex;
      flex-direction: row-reverse;
      gap: 0.7rem;
    }

    .modal-confirm,
    .modal-cancel {
      display: flex;
      align-items: center;
      align-self: center;
      padding: 0.7rem 1.8rem;
      border: 1px solid #e0e0e0;
      background-color: #fff;
      font-size: 0.9rem;
      font-family: "Inter", sans-serif;
      font-weight: 500;
      border-radius: 7px;
      cursor: pointer;
    }

    .modal-confirm {
      background-color: crimson;
      border-color: crimson;
      color: #fff;

      &:hover {
        background-color: rgb(179, 0, 36);
      }
    }

    .modal-cancel {
      &:hover {
        background-color: #f0f0f0;
      }
    }
  }
}

.air-datepicker-body--day-name {
  color: #000 !important;
  font-weight: bold;
}

.air-datepicker-cell.-current- {
  color: orange !important;
}

.-bottom-right- {
  @media (max-width: 600px) {
    left: 1rem !important;
  }
}

.-bottom-right- .air-datepicker--pointer {
  @media (max-width: 600px) {
    right: 80% !important;
  }
}

.-selected- {
  background-color: dodgerblue !important;
}

#todo-app-container {
  display: flex;
  min-height: 95vh;
  max-width: 100%;
  padding-bottom: 3rem;

  @media (max-width: 991px) {
    flex-direction: column;
  }
}

aside {
  display: flex;
  flex-direction: column;
  gap: 1.1rem;
  width: 30%;
  max-width: 380px;
  padding: 2.4rem 1rem 2.2rem 1rem;
  border-color: #eee;
  border-style: solid;
  border-width: 0 1px 0 0;

  @media (max-width: 991px) {
    width: 100%;
    max-width: 100%;
    border-width: 0 0 1px 0;
  }

  .add-project {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    height: 46px;
    max-width: 100%;
    margin: 0 0.5rem;
    padding: 0.7rem 1rem 0.7rem 0.5rem;
    border: 0;
    background-color: #fff;
    font-size: inherit;
    font-family: "Inter", sans-serif;
    font-weight: 400;
    color: #888;
    border-radius: 12px;
    cursor: pointer;

    span {
      padding-bottom: 0.4rem;
      font-weight: 200;
      font-size: 2rem;
      line-height: 0;
      color: #aaa;
    }

    &:hover {
      background-color: #f7f7f7;
      color: #333;

      span {
        color: #444;
      }
    }

    &.highlighted {
      padding-left: 1rem;
      background-color: dodgerblue;
      color: #fff;
      border-color: dodgerblue;

      span {
        color: #fff;
      }

      &:hover {
        background-color: #006ad3;
        border-color: #006ad3;
      }
    }
  }

  .project-item {
    display: flex;
    align-items: center;
    gap: 0.3rem;
    max-width: 100%;
    cursor: pointer;
    margin: 0.5rem;
    padding: 0.5rem 0.7rem;

    border-radius: 12px;

    &:hover {
      background-color: #f9f9f9;
    }

    &.active {
      background-color: #eee;
    }

    &:not(.active) {
      span {
        pointer-events: none;
      }
    }

    i {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 25px;
      height: 25px;
      padding: 0 1px 1px 0;
      font-style: normal;
      font-size: 0.8rem;
      color: #fff;
      background-color: dodgerblue;
      border-radius: 50%;
    }

    span {
      display: flex;
      gap: 0.5rem;
      align-items: center;
      height: 26px;
      max-width: 100%;
      margin: 0.4rem 0.3rem 0.3rem;
      letter-spacing: 0.1px;
    }

    input {
      width: 86%;
      height: 26px;
      max-width: 100%;
      font-size: 0.99rem;
      letter-spacing: 0.15px;
      margin: 0.4rem 0.1rem 0.3rem 0.07rem;
    }

    span,
    input {
      vertical-align: middle;
      line-height: 120%;
      font-family: "Inter";
    }

    .hide {
      display: none;
    }
  }
}

#content {
  width: 70%;
  max-width: 1200px;
  padding: 1rem 2rem;

  @media (max-width: 991px) {
    width: 100%;
    max-width: 100%;
  }

  .title-container {
    display: flex;
    gap: 2rem;
    justify-content: space-between;

    @media (max-width: 991px) {
      flex-direction: column;
      gap: 0;
    }

    .project-headline {
      display: flex;
      align-items: baseline;
      gap: 0.8rem;

      h1 {
        color: dodgerblue;

        &.no-project {
          color: #d0d0d0;
        }
      }

      .remove-project {
        display: flex;
        gap: 0.5rem;
        padding: 0.1rem 0.3rem;
        border: 1px solid #e9e9e9;
        background-color: #fff;
        font-size: 0.7rem;
        font-family: "Inter", sans-serif;
        text-transform: uppercase;
        letter-spacing: 0.2px;
        font-weight: 350;
        color: #808080;
        border-radius: 4px;
        cursor: pointer;

        &:hover {
          color: #fff;
          background-color: crimson;
          border-color: crimson;
        }

        &.disabled {
          display: none;
          cursor: default;
        }
      }
    }

    .add-todo-item {
      display: flex;
      align-items: center;
      gap: 0.5rem;
      align-self: center;
      padding: 0.7rem 1rem 0.7rem 0.5rem;
      border: 1px solid #e0e0e0;
      background-color: #fff;
      font-size: 0.9rem;
      font-family: "Inter", sans-serif;
      font-weight: 500;
      border-radius: 7px;
      box-shadow: 0 2px 5px 0 rgba(213, 217, 217, 0.5);
      cursor: pointer;

      @media (max-width: 991px) {
        align-self: flex-start;
      }

      span {
        padding-bottom: 0.4rem;
        font-weight: 400;
        font-size: 2rem;
        line-height: 0;
        color: dodgerblue;
      }

      &:hover {
        background-color: dodgerblue;
        color: #fff;
        border-color: dodgerblue;

        span {
          color: #fff;
        }
      }

      &.disabled {
        box-shadow: none;
        color: #ccc;
        cursor: default;

        span {
          color: #d0d0d0;
        }

        &:hover {
          background-color: inherit;
          border-color: #e0e0e0;

          span {
            color: inherit;
          }
        }
      }
    }
  }

  .todo-container {
    height: 90%;
    padding-top: 0.4rem;

    @media (max-width: 991px) {
      padding-top: 1rem;
    }
  }

  .empty-todo-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    padding-top: 20%;
    color: #000;
    font-weight: 500;

    img {
      width: 100%;
      max-width: 160px;
    }
  }

  .todo-item {
    display: flex;
    gap: 5px;
    align-items: center;
    justify-content: space-between;
    padding: 1.2rem 1rem 1.2rem 0;
    border-bottom: 1px solid #e0e0e0;

    @media (max-width: 600px) {
      flex-wrap: wrap;
    }

    &__name {
      width: 80%;
      margin-right: auto;

      &:focus-visible {
        outline: 0;
      }
    }

    [class*="datepicker-"] {
      width: 124px;
      cursor: pointer;
      border: 0;
      font-size: 1rem;
      text-align: right;

      @media (max-width: 600px) {
        text-align: left;
      }

      &.expired {
        color: crimson;
      }

      &::placeholder {
        color: #000;
      }

      &:focus-visible {
        outline: 0;
      }
    }

    .checkmark-container {
      display: inline;
      position: relative;
      height: 24px;
      padding-left: 30px;
      cursor: pointer;
      font-size: 22px;
      user-select: none;

      /* Hide the browser's default radio button */
      input {
        position: absolute;
        opacity: 0;
        cursor: pointer;
        height: 0;
        width: 0;
      }

      /* Create a custom radio button */
      .checkmark {
        position: absolute;
        top: 0;
        left: 0;
        height: 22px;
        width: 22px;
        background-color: #fff;
        border-radius: 50%;
        border: 2px solid #999;
      }

      /* On mouse-over, add a grey background color */
      &:hover input ~ .checkmark {
        background-color: #f7f7f7;
      }

      /* When the radio button is checked, add a blue background */
      input:checked ~ .checkmark {
        background-color: #fff;
      }

      /* Create the indicator (the dot/circle - hidden when not checked) */
      .checkmark:after {
        content: "";
        position: absolute;
        display: none;
      }

      /* Show the indicator (dot/circle) when checked */
      input:checked ~ .checkmark:after {
        display: block;
      }

      /* Style the indicator (dot/circle) */
      .checkmark:after {
        top: 1.7px;
        left: 1.5px;
        width: 84%;
        height: 84%;
        border-radius: 50%;
        background: #2196f3;
      }
    }

    &.checked {
      .checkmark:after {
        content: "";
        position: absolute;
        display: block;
      }
    }
  }
}

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  min-height: 5vh;
  font-size: 0.9rem;
  font-weight: 300;
  color: #aaa;
  border-top: 1px solid #eee;

  @media (max-width: 600px) {
    display: inline-block;
    text-align: center;
    padding: 1rem;
  }

  a,
  a:hover,
  a:visited,
  a:active {
    text-decoration: none;
    border-bottom: 1px solid;
    color: dodgerblue;
  }
}

